chat should be correctly positioned, a button to slide the admin panel behind the chat might be useful, search and notification of unread chat is probably needed

--- a/resources/css/chat.scss
+++ b/resources/css/chat.scss
@@ -45,8 +45,10 @@ body {
 .section-one {
     @apply flex flex-1 items-center justify-center;
     height:calc(100vh);
-    width: 992px;
-
+    max-width: 992px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     &.dark-mode {
         background-color: #293a50;
     }
